--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,21 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+a{
+    
+}
+
+.nav{
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-self: center;
+}
+
 #errorText{
     display: none;
 }
