--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,345 @@
+/* FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+/* USE */
+/* 
+font-family: 'Rubik', sans-serif;
+*/
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Rubik', sans-serif;
+    color: #ffffff;
+}
+
+body{
+    background-color: #1d1d1d;
 }
 
 a{
-    
+    color: #d3d3d3;
+    text-decoration: none;
+}
+
+.center{
+    text-align: center;
 }
 
 .nav{
     display: flex;
     gap: 10px;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-self: center;
 }
 
 #errorText{
     display: none;
+}
+
+
+/* Navigation */ 
+
+.active{
+    color: #121212 !important;
+    background-color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 13px;
+}
+
+.nav-header {
+    background-color: #121212;
+    padding: 0 15px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+ nav {
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ .logo-container>a {
+    color: ghostwhite;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 26px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.logo-text{
+    font-size: 1.5rem;
+}
+
+.logo > img{
+    width: 50px;
+    height: 50px;
+}
+
+ .nav-items {
+    display: flex;
+    gap: 40px;
+}
+
+ .nav-items>a {
+    color: ghostwhite;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    transition: .3s ease-in-out;
+    padding: 10px 20px;
+    border-radius: 13px;
+}
+
+ .nav-items>a:hover {
+    color: #121212 !important;
+    background-color: #ffffff;
+}
+
+ .hamburger {
+    display: none;
+    font-size: 20px;
+    font-weight: 800;
+    color: white;
+}
+
+ @media screen and (max-width:768px) {
+    .hamburger {
+        display: flex;
+        cursor: pointer;
+    }
+
+    .hamburger #closeHam {
+        display: none;
+    }
+
+    .nav-items {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        right: 0;
+        top: 58px;
+        background-color: #121212;
+        width: 100%;
+        height: calc(100vh - 58px);
+        padding-top: 60px;
+        gap: 10vh;
+    }
+}
+
+/* Home Styling */
+
+#home{
+    height: 90vh;
+}
+
+.home-cont{
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.home-img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.home-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.home-text{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+}
+
+.home-text h1{
+    font-size: 2rem;
+}
+
+.home-text p{
+    font-size: 1.2rem;
+}
+
+.home-btns{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.btn{
+    padding: 10px 20px;
+    border-radius: 13px;
+    background-color: #ffffff;
+    color: #121212;
+    font-weight: 700;
+    font-size: 1.2rem;
+    text-decoration: none;
+    transition: .3s ease-in-out;
+}
+
+.btn:hover{
+    box-shadow: 0 0 10px 0 #ffffff;
+}
+
+/* Registration home */
+
+.admin-reg{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.reg-btn-cont{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    
+}
+
+.reg-head{
+    text-align: center;
+    padding: 20px;
+}
+
+.reg-cont{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 0 20px;
+    align-items: center;
+
+}
+
+.reg-btn{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    border: 1px solid #ffffff;
+    padding: 20px 100px;
+    border-radius: 20px;
+    box-shadow: 0 0 5px 0 #ffffff;
+}
+
+.reg-btn img{
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+/* FORM Styling */
+
+.form-cont > h1{
+    text-align: center;
+    padding: 20px;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    padding: 10px;
+    gap: 20px;
+}
+
+form > label{
+    font-size: 1.2rem;
+    text-align: left;
+}
+
+form > input, form > select, form > textarea{
+    padding: 10px;
+    border-radius: 13px;
+    border: 1px solid #ffffff;
+    background-color: #121212;
+    color: #ffffff;
+    width: 100%;
+}
+
+form > .btn{
+    width: auto;
+    text-align: center;
+}
+
+form > input::placeholder, form > select::placeholder{
+    color: #ffffff49;
+}
+
+form > {
+    padding: 10px;
+    border-radius: 13px;
+    border: 1px solid #ffffff;
+    background-color: #121212;
+    color: #ffffff;
+}
+
+
+/* Reponsiveness */
+
+@media screen and (min-width:768px) {
+
+    .home-cont{
+        width: 80vw;
+        margin: 0 auto;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .home-text, .home-img{
+        width: 50%;
+    }
+
+    .home-text h1{
+        text-align: left;
+        font-size: 2rem;
+    }
+    
+    .home-text p{
+        font-size: 1.2rem;
+    }
+
+    .home-text{
+        text-align: left;
+        align-items: flex-start;
+    }
+
+    .reg-btn-cont{
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
+}
+
+@media  screen and (min-width:1000px) {
+
+    .home-text h1{
+        font-size: 3rem;
+    }
+
 }
