--- a/styles/style.css
+++ b/styles/style.css
@@ -118,6 +118,16 @@ a{
     color: white;
 }
 
+.inv-cont{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    width: 70vw;
+    margin: 0 auto;
+}
+
+
  @media screen and (max-width:768px) {
     .hamburger {
         display: flex;
