--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,24 @@ body{
     background-color: #1d1d1d;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+background: #f1f1f1;
+box-shadow: inset 0 0 5px grey;
+border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+background: #555;
+}
+
 a{
     color: #d3d3d3;
     text-decoration: none;
