--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,17 @@ a{
     display: none;
 }
 
+.error{
+    /* remove the background from image with blend mode */
+    mix-blend-mode: multiply;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    box-shadow: red 0 0 10px 0;
+    filter: brightness(1.5), contrast(1.3), saturate(1.5);
+    width: 500px;
+}
+
 .web{
     display: block;
 }
@@ -413,7 +424,7 @@ form > {
     }
 
     .form-cont{
-        width: 60vw;
+        width: 50vw;
         margin: 0 auto;
         background-color: #121212;
         padding: 20px;
